# zombie

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
demo/: CMakeLists.txt  README.md  colormap.h  config.h  demo.cpp  demo.py  grid.h  image.h  model_problem.h  scene.h
demo/model_problems/: image2pfm.py
demo/model_problems/engine/: bvc.json  hc.json  rws.json  wost.json  wost_dirac_importance_sample.json
demo/model_problems/engine/data/: absorbing_boundary_value.pfm  dirac.pfm
demo/model_problems/engine/solutions/: bvc.pfm  bvc_color.pfm  hc.pfm  hc_color.pfm  rws.pfm  rws_color.pfm  wost.pfm  wost_color.pfm
demo/model_problems/nautilus/: wos.json
demo/scenes/: image2pfm.py  requirements.txt  svg2obj.py
demo/scenes/engine/: bvc.json  rws.json  wost.json
demo/scenes/engine/data/: engine.ai  reflecting_boundary_value.pfm  source_value.pfm
demo/scenes/engine/solutions/: bvc.pfm  bvc_color.pfm  rws.pfm  rws_color.pfm  wost.pfm  wost_color.pfm
include/zombie/: zombie.h
include/zombie/boundary_value_caching/: boundary_sampler.h  domain_sampler.h  splatter.h
include/zombie/core/: bessel.h  distributions.h  geometric_queries.h  geometry_helpers.h  pde.h  sampling.h  sh.h
include/zombie/point_estimation/: common.h  reverse_walk_on_stars.h  walk_on_spheres.h  walk_on_stars.h
include/zombie/utils/: dense_grid.h  fcpw_boundary_handler.h  fcpw_geometric_queries.h  fcpw_scene_loader.h  nearest_neighbor_finder.h  nearest_neighbor_queries.h  octree.h  progress.h  sdf_grid_geometric_queries.h
include/zombie/utils/reflectance_boundary_bvh/: baseline.h  bvh.h  geometry.h  mbvh.h  robin_bounds.h
include/zombie/utils/robin_boundary_bvh/: baseline.h  bvh.h  geometry.h  mbvh.h
include/zombie/variance_reduction/: boundary_sampler.h  boundary_samplers.h  boundary_value_caching.h  domain_sampler.h  domain_samplers.h  harmonic_caching.h  kelvin_transform.h  reverse_walk_solver.h  reverse_walk_splatter.h
python/: CMakeLists.txt  zombie_bindings.cpp  zombie_bindings.h
python/zombie/: __init__.py
