[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "cmake>=3.15"]
build-backend = "scikit_build_core.build"

[project]
name = "zombie"
version = "0.1"
description = "Python bindings for Zombie"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Rohan Sawhney" },
    { name = "Bailey Miller" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/rohan-sawhney/zombie"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"

# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.scikit-build.cmake.define]
ZOMBIE_BUILD_DEMO = "OFF"
ZOMBIE_BUILD_BINDINGS = "ON"
